--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -1,4 +1,4 @@
-{% extends 'posts/home.html' %} {% block content %}
+{% extends 'posts/base.html' %} {% block content %}
 <h2>제목 : {{post.title}}</h2>
 <h3>유저 : {{post.user.nickname}}</h3>
 <p>게시일자 : {{post.published_at}}</p>
