[fix] form 형식 수정

--- a/place/templates/place/write.html
+++ b/place/templates/place/write.html
@@ -1,9 +1,16 @@
 {% extends 'place/base.html' %}
 {% block content %}
 <div class="content">
-  <form action="{% url 'place:write' %}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="content-box">
+<form action="{% url 'place:write' %}" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <table>
+    {{form.as_table}}
+  </table>
+  <div class="content-button">
+    <input type="button" value="취소" onclick="back()" />
+    <input type="submit" value="등록하기" />
+  </div>
+    <!-- <div class="content-box">
       <div class="content-box__title">
         <span>1</span><span> 사진을 업로드해주세요</span>
         <hr>
@@ -20,12 +27,12 @@
       </div>
       <div class="content-box__element">
         <div class="content-box__title">상호명</div>
-        <input class="content-box__input" type="text" name="name" placeholder="상호명을 입력해주세요">
+        <input class="content-box__input" type="text" name="name" maxlength="25" required="" id="id_name" placeholder="상호명을 입력해주세요">
       </div>
       <div class="content-box__element">
         <div class="content-box__title">위치</div>
-        <input class="content-box__input" type="text" name="location" placeholder="도로명을 입력해주세요">
-        <input class="content-box__input" type="text" name="location" placeholder="상세 정보를 입력해주세요(선택)">
+        <input class="content-box__input" type="text" name="location" maxlength="25" required=""placeholder="도로명을 입력해주세요">
+        <input class="content-box__input" type="text" name="location" maxlength="25" required="" placeholder="상세 정보를 입력해주세요(선택)">
         <div class="content-box__image"></div>
       </div>
     </div>
@@ -36,48 +43,37 @@
       </div>
       <div class="content-box__element">
         <div class="content-box__title">장소분류</div>
-        <!-- <button class="label">카페/스터디룸/카페</button>
-        <ul class="optionList">
-          {% for category in categories %}
-          <li class="optionItem">{{ category.1 }}</li>
-          {% endfor %}
-        </ul> -->
-        <select name="category" class="selectpicker">
+        <select name="category" required="" id="id_category" class="selectpicker">
+          <option selected value="default">----</option>
           {% for category in categories %}
           <option value="{{ category.1 }}">{{ category.1 }}</option>
           {% endfor %}
-        </select>        
       </div>
       <div class="content-box__element">
         <div class="content-box__title">운영 시간</div>
-        <input class="content-box__input" type="time" name="opening_time" min="08:00" max="24:00">
-        <input class="content-box__input" type="time" name="closing_time" min="08:00" max="24:00">
+        <input class="content-box__input" type="text" name="opening_time" required="" id="id_opening_time">
+        <input class="content-box__input" type="text" name="closing_time" required="" id="id_closing_time">
       </div>
       <div class="content-box__element">
         <div class="content-box__title">와이파이</div>
-        <!-- <button class="label">빠름/느림/없음</button>
-        <ul class="optionList">
+        <select name="wifi" required="" id="id_wifi" class="selectpicker">
+          <option selected value="default">----</option>
           {% for wifi in wifis %}
-          <li class="optionItem">{{ wifi.1 }}</li>
-          {% endfor %}
-        </ul> -->
-        <select name="wifi" class="selectpicker">
-          {% for wifi in wifis %}
-          <option>{{ wifi.1 }}</option>
+          <option value="{{ wifi.1 }}">{{ wifi.1 }}</option>
           {% endfor %}
         </select>    
       </div>
-      <div class="content-box__element">
         <div class="content-box__title">콘센트</div>
-        <select name="power_socket" class="selectpicker">
+        <select name="power_socket" required="" id="id_power_socket"class="selectpicker">
+          <option value="" selected="">---------</option>
           {% for power_socket in power_sockets %}
-          <option>{{ power_socket.1 }}</option>
+          <option value="{{ power_socket.1 }}">{{ power_socket.1 }}</option>
           {% endfor %}
         </select>    
       </div>
       <div class="content-box__element">
         <div class="content-box__title">별점</div>
-        <input class="content-box__input" type="number" name="rating" min="1" max="5">
+        <input class="content-box__input" type="number" name="rating" step="any" required="" id="id_rating" min="1" max="5">
       </div>
     </div>
     <div class="content-box">
@@ -87,7 +83,7 @@
       </div>
       <div class="content-box__element">
         <div class="content-box__title">후기</div>
-        <input class="content-box__input" type="text" name="content" placeholder="내용을 작성해주세요">
+        <textarea name="content" cols="40" rows="10" required="" id="id_content"></textarea>
       </div>
     </div>
     <div class="content-button">
@@ -95,10 +91,10 @@
       <input type="submit" value="등록하기" />
     </div>
   </form>
-</div>
-  <script>
+  </div> -->
+  <!-- <script>
     const back = () => {
       window.history.back();
     }
-  </script>
+  </script> -->
 {% endblock content %}
