--- a/place/templates/place/base.html
+++ b/place/templates/place/base.html
@@ -8,9 +8,9 @@
 		<script src="https://kit.fontawesome.com/f0c26c0bfa.js" crossorigin="anonymous"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 		<link rel="stylesheet" href="{% static 'css/base.css' %}">
-		<link rel="stylesheet" href="{% static 'css/home.css' %}">
-		<link rel="stylesheet" href="{% static 'css/detail.css' %}">
-		<link rel="stylesheet" href="{% static 'css/write.css' %}">
+		<link rel="stylesheet" href="{% static 'css/place_home.css' %}">
+		<link rel="stylesheet" href="{% static 'css/place_detail.css' %}">
+		<link rel="stylesheet" href="{% static 'css/place_write.css' %}">
 		<title>MOCO</title>
 	</head>
 	<body>
