--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,6 +24,7 @@ body {
 
 .navbar {
   box-shadow: 0px 4px 10px rgba(171, 186, 189, 0.15);
+  background-color: white;
   font-family: 'Noto Sans', sans-serif;
   font-family: 'Noto Sans KR', sans-serif;
   font-weight: 600;
@@ -32,6 +33,9 @@ body {
   top: 0;
   left: 0;
   right: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .navbar__list {
@@ -56,6 +60,16 @@ body {
   font-size: 1.25rem;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1200px;
+  width: 100%;
+  padding: 20px 10px 0 10px;
+  margin: 0 auto;
+}
 
 
 
