--- a/users/templates/users/signup-2nd-step.html
+++ b/users/templates/users/signup-2nd-step.html
@@ -32,7 +32,7 @@
       </div>
       <div class="nav_2">
         <div><a href="">글쓰기</a></div>
-        <div><a href="">로그인</a></div>
+        <div><a href="{% url 'users/login.html' %}">로그인</a></div>
       </div>
     </nav>
     <!--login main-->
